--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "react-markdown": "^10.1.0",
+    "react-player": "^2.16.0",
     "tailwind-merge": "^3.4.0",
     "tsx": "^4.21.0"
   },
